syntax = "proto3";
package proto;

service API {
    rpc Login(LoginRequest) returns (Response);
    rpc CreateCocoon(CreateCocoonRequest) returns (Response);
    rpc CreateRelease(CreateReleaseRequest) returns (Response);
    rpc CreateIdentity(CreateIdentityRequest) returns (Response);
    rpc Deploy(DeployRequest) returns (Response);
    rpc GetCocoon(GetCocoonRequest) returns (Response);
    rpc GetIdentity(GetIdentityRequest) returns (Response);
    rpc AddCocoonToIdentity(AddCocoonToIdentityRequest) returns (Response);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message AddCocoonToIdentityRequest {
    string email = 1;
    string cocoonId = 2;
}

message CreateCocoonRequest {
    string ID = 1;
    string URL = 2;
    string language = 3;
    string releaseTag = 4;
    string buildParam = 5;
    string memory = 6;
    string CPUShare = 7;
    repeated string releases = 8;
    int32 instances = 9;
    int32 numSignatories = 10;
    int32 sigThreshold = 11;
    repeated string signatories = 12;
}

message GetCocoonRequest {
    string ID = 1;
    string Identity = 2;
}

message GetIdentityRequest {
    string email = 1;
}

message CreateReleaseRequest {
    string ID = 1;
    string cocoonID = 2;
    string URL = 3;
    string language = 4;
    string releaseTag = 5;
    string buildParam = 6;
    int32 sigApproved = 7;
    int32 sigDenied = 8;
}

message DeployRequest {
    string ID = 1;
    string URL = 2;
    string language = 3;
    string releaseTag = 4;
    bytes buildParam = 5;
    string memory = 6;
    string CPUShare = 7;
}

message CreateIdentityRequest {
    string email = 1;
    string password = 2;
}

message Response {
    string ID = 1;
    int32 status = 2;
    bytes body = 3;
}
